# BauFamiliaG1

./: Blah  Blah.txt  EntrevistaDefinitivaAD.md  README.md  Read_Me.md  pyproject.toml  trabalhar.txt
Dataset_entrevistas/: dataset_corpus_entrevista_joana.csv  dataset_corpus_entrevista_joao.csv
Entrevista_Ana_G1/: Entrevista_1_Ana.m4a  Entrevista_1_Ana.md  Entrevista_1_Ana.txt  Entrevista_2_Ana.m4a  Read_me  Read_me.md
Entrevista_Ana_Trabalho_Final_G1/: Entrevista_Ana.md
Entrevista_JoãoApresentação_G1/: Transcrição-Entrevista.md
Entrevista_Mãe/: Texto-Entrevista Mãe.md
Entrevista_Rosa_Reis_G1/:  Transcricao_Entrevista_RosaReis_G1.md
PastaEntrevistaJoao/: EntrevistaDefinitivaAD.md
Pasta_da_Velhada/: Lixeira
codigos/: Perguntas Possíveis.docx  analise_de_sentimento.py  analise_de_sentimento_triplo.py  analise_de_sentimentos.csv  analise_de_sentimentos_por_entrevistado.csv  colocacoes.py  colocacoes_frequencia.csv  colocacoes_top10.csv  colocacoes_top10.py  colocacoes_top10_Joana.csv  colocacoes_top10_João.csv  colocacoes_top10_Mariana.csv  colocacoes_top10_triplo.py  dataset_corpus_entrevista_mariana.csv  dataset_entrevistas.csv  entidades.csv  entidades.py  entidades_frequencia.csv  entidades_top10.py  entidades_top10_Joana.csv  entidades_top10_João.csv  entidades_top10_Mariana.csv  entidades_top10_triplo.py  keywords.py  keywords_top10.csv  keywords_top10.py  keywords_top10_por_entrevistado.csv  keywords_top10_triplo.py  lemas.py  lemas_frequencia.csv  lemas_top10.csv  lemas_top10.py  lemas_top10_Joana.csv  lemas_top10_João.csv  lemas_top10_Mariana.csv  (+23 more)
(+50 files in other folders)
